# NewTurtlleERP

./: turtleerp.sql
Authentication/: .env.example  README.md  pyproject.toml
Authentication/auth_service/: settings.py
Authentication/user_auth_lib/: __init__.py  constants.py  email_service.py  exceptions.py  hashing.py  jwt_auth.py  mfa.py  otp.py  rate_limiter.py  sms_service.py  template_manager.py  tokens.py  validation.py
Authentication/user_auth_lib/templates/: mfa_setup.html  otp_email.html
Authentication/user_auth_lib/tests/: __init__.py  test_hashing.py  test_jwt_auth.py  test_otp.py  test_tokens.py
TurtleEComm_Backend/KeyProductSettings/: settings.py  urls.py
TurtleEComm_Backend/ecomm_inventory/: admin.py  filters.py  models.py  serializers.py  services.py  views.py
TurtleEComm_Backend/ecomm_superadmin/: admin_urls.py  models.py  serializers.py  views.py
TurtleEComm_Backend/ecomm_superadmin/migrations/: 0004_auto_20250331_1713.py  0005_auto_20250331_1741.py  0006_alter_domain_table.py
TurtleEComm_Backend/ecomm_tenant/ecomm_tenant_admins/: middleware.py  models.py  tenant_admin_urls.py  views.py
TurtleEComm_Backend/ecomm_tenant/ecomm_tenant_admins/migrations/: 0003_auto_20250331_1713.py  0004_auto_20250331_1745.py  0005_auto_20250331_1847.py  0006_pendingregistration_updated_at_and_more.py
TurtleEcomm_Frontend/: next.config.js  package-lock.json  package.json
TurtleEcomm_Frontend/src/pages/platform-admin/users/: index.js
TurtleEcomm_Frontend/src/services/: authService.js
